Update call number display to 7903162712

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                             <div class="contact-sub">7903162712</div>
                         </div>
                     </a>
-                    <a class="contact-card" href="tel:+7903162712">
+                    <a class="contact-card" href="tel:+917903162712">
                         <i class="fa-solid fa-phone"></i>
                         <div>
                             <div class="contact-title">Call</div>
-                            <div class="contact-sub">+7 903 162 712</div>
+                            <div class="contact-sub">7903162712</div>
                         </div>
                     </a>
                     <a class="contact-card" href="mailto:hello@zayli.example">
