Add product gallery images

--- a/index.html
+++ b/index.html
@@ -56,26 +56,9 @@
                     <p>Delicate designs for every occasion.</p>
                 </div>
 
-                <div class="uploader">
-                    <div class="uploader-actions">
-                        <label class="file-input">
-                            <input id="earrings-input" type="file" accept="image/*" multiple>
-                            <span><i class="fa-regular fa-images"></i> Upload Earrings Photos</span>
-                        </label>
-                        <button id="earrings-clear" class="btn-link" type="button">
-                            <i class="fa-regular fa-trash-can"></i> Clear All
-                        </button>
-                    </div>
-                    <div id="earrings-drop" class="dropzone">
-                        <div class="dz-inner">
-                            <i class="fa-regular fa-circle-up"></i>
-                            <p>Drag and drop images here or click “Upload”</p>
-                            <small>PNG, JPG, JPEG • up to ~10MB each</small>
-                        </div>
-                    </div>
+                <div id="earrings-gallery" class="gallery">
+                    <!-- Sample earrings will be added here -->
                 </div>
-
-                <div id="earrings-gallery" class="gallery"></div>
             </div>
         </section>
 
@@ -87,26 +70,9 @@
                     <p>Statement pieces to elevate your style.</p>
                 </div>
 
-                <div class="uploader">
-                    <div class="uploader-actions">
-                        <label class="file-input">
-                            <input id="necklaces-input" type="file" accept="image/*" multiple>
-                            <span><i class="fa-regular fa-images"></i> Upload Necklaces Photos</span>
-                        </label>
-                        <button id="necklaces-clear" class="btn-link" type="button">
-                            <i class="fa-regular fa-trash-can"></i> Clear All
-                        </button>
-                    </div>
-                    <div id="necklaces-drop" class="dropzone">
-                        <div class="dz-inner">
-                            <i class="fa-regular fa-circle-up"></i>
-                            <p>Drag and drop images here or click “Upload”</p>
-                            <small>PNG, JPG, JPEG • up to ~10MB each</small>
-                        </div>
-                    </div>
+                <div id="necklaces-gallery" class="gallery">
+                    <!-- Sample necklaces will be added here -->
                 </div>
-
-                <div id="necklaces-gallery" class="gallery"></div>
             </div>
         </section>
 
@@ -164,11 +130,11 @@
                             <div class="contact-sub">7903162712</div>
                         </div>
                     </a>
-                    <a class="contact-card" href="mailto:hello@zayli.example">
+                    <a class="contact-card" href="mailto:shopzayli18@gmail.com">
                         <i class="fa-regular fa-envelope"></i>
                         <div>
                             <div class="contact-title">Email</div>
-                            <div class="contact-sub">hello@zayli.example</div>
+                            <div class="contact-sub">shopzayli18@gmail.com</div>
                         </div>
                     </a>
                 </div>
