Add earrings and necklace images to gallery

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 </div>
 
                 <div id="earrings-gallery" class="gallery">
-                    <!-- Sample earrings will be added here -->
+                    <div class="card"><span class="badge">Earrings</span><img src="assets/earrings/earrings-1.jpeg" alt="Earrings" loading="lazy"></div>
+                    <div class="card"><span class="badge">Earrings</span><img src="assets/earrings/earrings2.jpeg" alt="Earrings" loading="lazy"></div>
                 </div>
             </div>
         </section>
@@ -71,7 +72,25 @@
                 </div>
 
                 <div id="necklaces-gallery" class="gallery">
-                    <!-- Sample necklaces will be added here -->
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.06.14%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.06.15%20AM%20%282%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.06.15%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.06.15%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.42%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.43%20AM%20%282%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.43%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.43%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.44%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.31%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.31%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.32%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.32%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.09.40%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.09.40%20AM.jpeg" alt="Necklace" loading="lazy"></div>
                 </div>
             </div>
         </section>
@@ -165,3 +184,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
