--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">
-                <img src="logo.png" alt="Zayli Logo" id="brand-logo">
-                <span>Zayli</span>
+            <div class="nav-brand">
+                <img src="logo.png" alt="Zayli" class="nav-logo">
+                <span class="nav-title">Zayli</span>
             </div>
-            <ul class="nav-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#earrings">Earrings</a></li>
-                <li><a href="#necklaces">Necklaces</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-            <div class="hamburger">
+            <div class="nav-menu" id="nav-menu">
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#earrings" class="nav-link">Earrings</a>
+                <a href="#necklaces" class="nav-link">Necklaces</a>
+                <a href="#bracelets" class="nav-link">Bracelets</a>
+                <a href="#about" class="nav-link">About</a>
+                <a href="#contact" class="nav-link">Contact</a>
+            </div>
+            <div class="hamburger" id="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -36,112 +37,112 @@
         <div class="hero-inner">
             <img src="logo.png" alt="Zayli" class="hero-logo" id="hero-logo">
             <h1>Timeless Elegance by Zayli</h1>
-            <p>Handcrafted earrings and necklaces designed to shine every day.</p>
+            <p>Handcrafted earrings, necklaces, and bracelets designed to shine every day.</p>
             <div class="cta-group">
                 <a href="#earrings" class="btn btn-primary">Shop Earrings</a>
                 <a href="#necklaces" class="btn btn-outline">Shop Necklaces</a>
-                <a href="https://wa.me/7903162712" class="btn btn-whatsapp" target="_blank" rel="noopener">
+                <a href="#bracelets" class="btn btn-outline">Shop Bracelets</a>
+                <a href="https://wa.me/917903162712" class="btn btn-whatsapp" target="_blank" rel="noopener">
                     <i class="fa-brands fa-whatsapp"></i> WhatsApp: 7903162712
                 </a>
             </div>
         </div>
     </header>
 
+    <!-- Main Content -->
     <main>
         <!-- Earrings Section -->
         <section id="earrings" class="section">
             <div class="container">
-                <div class="section-head">
-                    <h2>Earrings</h2>
-                    <p>Delicate designs for every occasion.</p>
+                <div class="section-header">
+                    <h2>Earrings Collection</h2>
+                    <p>Elegant earrings that complement your style</p>
                 </div>
-
                 <div id="earrings-gallery" class="gallery">
-                    <div class="card"><span class="badge">Earrings</span><img src="assets/earrings/earrings-1.jpeg" alt="Earrings" loading="lazy"></div>
-                    <div class="card"><span class="badge">Earrings</span><img src="assets/earrings/earrings2.jpeg" alt="Earrings" loading="lazy"></div>
+                    <!-- Earring images will be added here -->
                 </div>
             </div>
         </section>
 
         <!-- Necklaces Section -->
-        <section id="necklaces" class="section alt">
+        <section id="necklaces" class="section">
             <div class="container">
-                <div class="section-head">
-                    <h2>Necklaces</h2>
-                    <p>Statement pieces to elevate your style.</p>
+                <div class="section-header">
+                    <h2>Necklaces Collection</h2>
+                    <p>Stunning necklaces for every occasion</p>
                 </div>
-
                 <div id="necklaces-gallery" class="gallery">
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM.jpeg" alt="Necklace" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.06.14%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.06.15%20AM%20%282%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.06.15%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.06.15%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.42%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.43%20AM%20%282%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.43%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.43%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.44%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.31%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.31%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.32%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.32%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.09.40%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.09.40%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.15%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.15%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.16%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.16%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.17%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.17%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.18%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.18%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.19%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.19%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.20%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.20%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.21%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.21%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.22%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.22%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.23%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.23%20AM.jpeg" alt="Necklace" loading="lazy"></div>
                 </div>
             </div>
         </section>
 
-        <!-- About -->
-        <section id="about" class="section">
-            <div class="container split">
-                <div>
-                    <h2>About Zayli</h2>
-                    <p>Zayli celebrates refined craftsmanship and subtle luxury. Each piece is thoughtfully designed to complement your everyday and special moments.</p>
-                    <ul class="bullets">
-                        <li>Premium materials</li>
-                        <li>Handcrafted finish</li>
-                        <li>Small-batch drops</li>
-                    </ul>
-                    <a href="https://wa.me/7903162712" class="btn btn-whatsapp" target="_blank" rel="noopener">
-                        <i class="fa-brands fa-whatsapp"></i> Chat on WhatsApp
-                    </a>
-                </div>
-                <div class="about-card">
-                    <div class="about-stat">
-                        <span class="num">1000+</span>
-                        <span class="label">Happy Customers</span>
-                    </div>
-                    <div class="about-stat">
-                        <span class="num">2019</span>
-                        <span class="label">Founded</span>
-                    </div>
-                    <div class="about-stat">
-                        <span class="num">100%</span>
-                        <span class="label">Quality Checked</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Contact -->
-        <section id="contact" class="section alt">
+        <!-- Bracelets Section -->
+        <section id="bracelets" class="section">
             <div class="container">
-                <div class="section-head">
-                    <h2>Contact</h2>
-                    <p>We’re quick on WhatsApp. Share your preferred style, and we’ll guide you.</p>
+                <div class="section-header">
+                    <h2>Bracelets Collection</h2>
+                    <p>Beautiful bracelets to adorn your wrists</p>
+                </div>
+                <div id="bracelets-gallery" class="gallery">
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet1.jpeg" alt="Bracelet 1" loading="lazy"></div>
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet2.jpeg" alt="Bracelet 2" loading="lazy"></div>
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet3.jpeg" alt="Bracelet 3" loading="lazy"></div>
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet4.jpeg" alt="Bracelet 4" loading="lazy"></div>
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet5.jpeg" alt="Bracelet 5" loading="lazy"></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About Section -->
+        <section id="about" class="section">
+            <div class="container">
+                <div class="section-header">
+                    <h2>About Zayli</h2>
+                    <p>Our story of craftsmanship and elegance</p>
+                </div>
+                <div class="about-content">
+                    <div class="about-text">
+                        <h3>Handcrafted with Love</h3>
+                        <p>At Zayli, we believe that every piece of jewelry tells a story. Our collection of earrings, necklaces, and bracelets is carefully crafted to bring out the beauty in every woman.</p>
+                        <p>From classic designs to contemporary styles, each piece is made with attention to detail and the finest materials.</p>
+                    </div>
+                    <div class="about-image">
+                        <img src="logo.png" alt="Zayli Craftsmanship" class="about-img">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="section">
+            <div class="container">
+                <div class="section-header">
+                    <h2>Get in Touch</h2>
+                    <p>We'd love to hear from you</p>
                 </div>
                 <div class="contact-grid">
-                    <a class="contact-card" href="https://wa.me/7903162712" target="_blank" rel="noopener">
-                        <i class="fa-brands fa-whatsapp"></i>
-                        <div>
-                            <div class="contact-title">WhatsApp</div>
-                            <div class="contact-sub">7903162712</div>
-                        </div>
-                    </a>
                     <a class="contact-card" href="tel:+917903162712">
                         <i class="fa-solid fa-phone"></i>
                         <div>
@@ -156,32 +157,55 @@
                             <div class="contact-sub">shopzayli18@gmail.com</div>
                         </div>
                     </a>
+                    <a class="contact-card" href="https://wa.me/917903162712" target="_blank" rel="noopener">
+                        <i class="fa-brands fa-whatsapp"></i>
+                        <div>
+                            <div class="contact-title">WhatsApp</div>
+                            <div class="contact-sub">7903162712</div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">
-        <div class="container footer-grid">
-            <div class="footer-brand">
-                <img src="logo.png" alt="Zayli" class="footer-logo">
-                <span>Zayli</span>
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-brand">
+                    <img src="logo.png" alt="Zayli" class="footer-logo">
+                    <h3>Zayli</h3>
+                    <p>Timeless elegance in every piece</p>
+                </div>
+                <div class="footer-links">
+                    <h4>Collections</h4>
+                    <ul>
+                        <li><a href="#earrings">Earrings</a></li>
+                        <li><a href="#necklaces">Necklaces</a></li>
+                        <li><a href="#bracelets">Bracelets</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h4>Contact Info</h4>
+                    <p><i class="fa-solid fa-phone"></i> 7903162712</p>
+                    <p><i class="fa-regular fa-envelope"></i> shopzayli18@gmail.com</p>
+                </div>
             </div>
-            <ul class="footer-links">
-                <li><a href="#earrings">Earrings</a></li>
-                <li><a href="#necklaces">Necklaces</a></li>
-                <li><a href="https://wa.me/7903162712" target="_blank" rel="noopener">WhatsApp</a></li>
-            </ul>
-            <div class="footer-copy">© <span id="year"></span> Zayli. All rights reserved.</div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Zayli. All rights reserved.</p>
+            </div>
         </div>
     </footer>
-
-    <!-- Floating WhatsApp -->
-    <a href="https://wa.me/7903162712" class="wa-float" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
-        <i class="fa-brands fa-whatsapp"></i>
-    </a>
 
     <script src="script.js"></script>
 </body>
 </html>
-
