Fix necklace images - restore working paths

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <h2>Necklaces Collection</h2>
                     <p>Stunning necklaces for every occasion</p>
                 </div>
-                <div id="necklaces-gallery" class="gallery">
+                <!-- <div id="necklaces-gallery" class="gallery">
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM.jpeg" alt="Necklace" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
@@ -95,7 +95,35 @@
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.23%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.23%20AM.jpeg" alt="Necklace" loading="lazy"></div>
                 </div>
+            </div> -->
+            <div id="necklaces-gallery" class="gallery">
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.15%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.15%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.16%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.16%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.17%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.17%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.18%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.18%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.19%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.19%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.20%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.20%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.21%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.21%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.22%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.22%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.23%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
+                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.23%20AM.jpeg" alt="Necklace" loading="lazy"></div>
             </div>
+
+
+
+
         </section>
 
         <!-- Bracelets Section -->
