--- a/index.html
+++ b/index.html
@@ -71,57 +71,29 @@
                     <h2>Necklaces Collection</h2>
                     <p>Stunning necklaces for every occasion</p>
                 </div>
-                <!-- <div id="necklaces-gallery" class="gallery">
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.13%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.14%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.15%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.15%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.16%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.16%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.17%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.17%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.18%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.18%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.19%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.19%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.20%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.20%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.21%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.21%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.22%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.22%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.23%20AM%20%281%29.jpeg" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.05.23%20AM.jpeg" alt="Necklace" loading="lazy"></div>
+                <div id="necklaces-gallery" class="gallery">
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-01.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-02.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-03.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-04.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-05.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-06.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-07.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-08.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-09.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-10.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-11.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-12.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-13.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-14.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-15.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-16.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-17.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-18.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-19.png" alt="Necklace" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-20.png" alt="Necklace" loading="lazy"></div>
                 </div>
-            </div> -->
-            <div id="necklaces-gallery" class="gallery">
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.42%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.43%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.44%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.45%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.46%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.47%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.48%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.49%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.50%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.51%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.52%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.53%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.54%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.55%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.56%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.57%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.58%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.07.59%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.00%20AM.jpeg" alt="Necklace" loading="lazy"></div>
-                <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/WhatsApp%20Image%202025-08-19%20at%2012.08.01%20AM.jpeg" alt="Necklace" loading="lazy"></div>
             </div>
-
-
-
-
         </section>
 
         <!-- Bracelets Section -->
