Fix necklace gallery to use l1, l2, l3 filenames

--- a/index.html
+++ b/index.html
@@ -71,44 +71,34 @@
                     <h2>Necklaces Collection</h2>
                     <p>Stunning necklaces for every occasion</p>
                 </div>
-                <div id="necklaces-gallery" class="gallery">
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-01.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-02.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-03.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-04.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-05.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-06.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-07.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-08.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-09.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-10.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-11.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-12.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-13.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-14.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-15.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-16.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-17.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-18.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-19.png" alt="Necklace" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/enshot-2025-08-24-20-48-20.png" alt="Necklace" loading="lazy"></div>
-                </div>
+                               <div id="necklaces-gallery" class="gallery">
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l1.jpeg" alt="Necklace 1" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l2.jpeg" alt="Necklace 2" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l3.jpeg" alt="Necklace 3" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l4.jpeg" alt="Necklace 4" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l5.jpeg" alt="Necklace 5" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l6.jpeg" alt="Necklace 6" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l7.jpeg" alt="Necklace 7" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l8.jpeg" alt="Necklace 8" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l9.jpeg" alt="Ne
             </div>
         </section>
 
         <!-- Bracelets Section -->
         <section id="bracelets" class="section">
             <div class="container">
-                <div class="section-header">
-                    <h2>Bracelets Collection</h2>
-                    <p>Beautiful bracelets to adorn your wrists</p>
-                </div>
-                <div id="bracelets-gallery" class="gallery">
-                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet1.jpeg" alt="Bracelet 1" loading="lazy"></div>
-                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet2.jpeg" alt="Bracelet 2" loading="lazy"></div>
-                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet3.jpeg" alt="Bracelet 3" loading="lazy"></div>
-                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet4.jpeg" alt="Bracelet 4" loading="lazy"></div>
-                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet5.jpeg" alt="Bracelet 5" loading="lazy"></div>
+                <div class="container">
+                    <div class="section-header">
+                        <h2>Bracelets Collection</h2>
+                        <p>Beautiful bracelets to adorn your wrists</p>
+                    </div>
+                    <div id="bracelets-gallery" class="gallery">
+                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet1.jpeg" alt="Bracelet 1" loading="lazy"></div>
+                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet2.jpeg" alt="Bracelet 2" loading="lazy"></div>
+                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet3.jpeg" alt="Bracelet 3" loading="lazy"></div>
+                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet4.jpeg" alt="Bracelet 4" loading="lazy"></div>
+                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet5.jpeg" alt="Bracelet 5" loading="lazy"></div>
+                    </div>
                 </div>
             </div>
         </section>
