Fix broken HTML structure and restore website

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <h2>Necklaces Collection</h2>
                     <p>Stunning necklaces for every occasion</p>
                 </div>
-                               <div id="necklaces-gallery" class="gallery">
+                <div id="necklaces-gallery" class="gallery">
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l1.jpeg" alt="Necklace 1" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l2.jpeg" alt="Necklace 2" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l3.jpeg" alt="Necklace 3" loading="lazy"></div>
@@ -80,25 +80,35 @@
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l6.jpeg" alt="Necklace 6" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l7.jpeg" alt="Necklace 7" loading="lazy"></div>
                     <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l8.jpeg" alt="Necklace 8" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l9.jpeg" alt="Ne
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l9.jpeg" alt="Necklace 9" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l10.jpeg" alt="Necklace 10" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l11.jpeg" alt="Necklace 11" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l12.jpeg" alt="Necklace 12" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l13.jpeg" alt="Necklace 13" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l14.jpeg" alt="Necklace 14" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l15.jpeg" alt="Necklace 15" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l16.jpeg" alt="Necklace 16" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l17.jpeg" alt="Necklace 17" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l18.jpeg" alt="Necklace 18" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l19.jpeg" alt="Necklace 19" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l20.jpeg" alt="Necklace 20" loading="lazy"></div>
+                </div>
             </div>
         </section>
 
         <!-- Bracelets Section -->
         <section id="bracelets" class="section">
             <div class="container">
-                <div class="container">
-                    <div class="section-header">
-                        <h2>Bracelets Collection</h2>
-                        <p>Beautiful bracelets to adorn your wrists</p>
-                    </div>
-                    <div id="bracelets-gallery" class="gallery">
-                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet1.jpeg" alt="Bracelet 1" loading="lazy"></div>
-                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet2.jpeg" alt="Bracelet 2" loading="lazy"></div>
-                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet3.jpeg" alt="Bracelet 3" loading="lazy"></div>
-                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet4.jpeg" alt="Bracelet 4" loading="lazy"></div>
-                        <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet5.jpeg" alt="Bracelet 5" loading="lazy"></div>
-                    </div>
+                <div class="section-header">
+                    <h2>Bracelets Collection</h2>
+                    <p>Beautiful bracelets to adorn your wrists</p>
+                </div>
+                <div id="bracelets-gallery" class="gallery">
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet1.jpeg" alt="Bracelet 1" loading="lazy"></div>
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet2.jpeg" alt="Bracelet 2" loading="lazy"></div>
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet3.jpeg" alt="Bracelet 3" loading="lazy"></div>
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet4.jpeg" alt="Bracelet 4" loading="lazy"></div>
+                    <div class="card"><span class="badge">Bracelets</span><img src="assets/bracelets/bracelet5.jpeg" alt="Bracelet 5" loading="lazy"></div>
                 </div>
             </div>
         </section>
