Fix necklace gallery filenames, remove logo references, and clean up JavaScript errors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <img src="logo.png" alt="Zayli" class="nav-logo">
                 <span class="nav-title">Zayli</span>
             </div>
             <div class="nav-menu" id="nav-menu">
@@ -35,7 +34,6 @@
     <!-- Hero -->
     <header id="home" class="hero">
         <div class="hero-inner">
-            <img src="logo.png" alt="Zayli" class="hero-logo" id="hero-logo">
             <h1>Timeless Elegance by Zayli</h1>
             <p>Handcrafted earrings, necklaces, and bracelets designed to shine every day.</p>
             <div class="cta-group">
@@ -72,26 +70,23 @@
                     <p>Stunning necklaces for every occasion</p>
                 </div>
                 <div id="necklaces-gallery" class="gallery">
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l1.jpeg" alt="Necklace 1" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l2.jpeg" alt="Necklace 2" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l3.jpeg" alt="Necklace 3" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l4.jpeg" alt="Necklace 4" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l5.jpeg" alt="Necklace 5" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l6.jpeg" alt="Necklace 6" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l7.jpeg" alt="Necklace 7" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l8.jpeg" alt="Necklace 8" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l9.jpeg" alt="Necklace 9" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l10.jpeg" alt="Necklace 10" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l11.jpeg" alt="Necklace 11" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l12.jpeg" alt="Necklace 12" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l13.jpeg" alt="Necklace 13" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l14.jpeg" alt="Necklace 14" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l15.jpeg" alt="Necklace 15" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l16.jpeg" alt="Necklace 16" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l17.jpeg" alt="Necklace 17" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l18.jpeg" alt="Necklace 18" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l19.jpeg" alt="Necklace 19" loading="lazy"></div>
-                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/l20.jpeg" alt="Necklace 20" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L1.jpeg" alt="Necklace 1" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L2.jpeg" alt="Necklace 2" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L3.jpeg" alt="Necklace 3" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L4.jpeg" alt="Necklace 4" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L5.jpeg" alt="Necklace 5" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L6.jpeg" alt="Necklace 6" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L7.jpeg" alt="Necklace 7" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L8.jpeg" alt="Necklace 8" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L9.jpeg" alt="Necklace 9" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L10.jpeg" alt="Necklace 10" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L11.jpeg" alt="Necklace 11" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L12.jpeg" alt="Necklace 12" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L13.jpeg" alt="Necklace 13" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L14.jpeg" alt="Necklace 14" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L15.jpeg" alt="Necklace 15" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L16.jpeg" alt="Necklace 16" loading="lazy"></div>
+                    <div class="card"><span class="badge">Necklaces</span><img src="assets/necklaces/L17.jpeg" alt="Necklace 17" loading="lazy"></div>
                 </div>
             </div>
         </section>
@@ -127,7 +122,10 @@
                         <p>From classic designs to contemporary styles, each piece is made with attention to detail and the finest materials.</p>
                     </div>
                     <div class="about-image">
-                        <img src="logo.png" alt="Zayli Craftsmanship" class="about-img">
+                        <div class="about-placeholder">
+                            <i class="fa-solid fa-gem"></i>
+                            <p>Zayli Craftsmanship</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -172,7 +170,6 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <img src="logo.png" alt="Zayli" class="footer-logo">
                     <h3>Zayli</h3>
                     <p>Timeless elegance in every piece</p>
                 </div>
@@ -199,7 +196,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Zayli. All rights reserved.</p>
+                <p>&copy; <span class="footer-year">2025</span> Zayli. All rights reserved.</p>
             </div>
         </div>
     </footer>
