--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
+                <img src="assets/logo/zayli-logo.png" alt="ZAYLI" class="nav-logo">
                 <span class="nav-title">Zayli</span>
             </div>
             <div class="nav-menu" id="nav-menu">
@@ -34,6 +35,7 @@
     <!-- Hero -->
     <header id="home" class="hero">
         <div class="hero-inner">
+            <img src="assets/logo/zayli-logo.png" alt="ZAYLI" class="hero-logo">
             <h1>Timeless Elegance by Zayli</h1>
             <p>Handcrafted earrings, necklaces, and bracelets designed to shine every day.</p>
             <div class="cta-group">
@@ -170,6 +172,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
+                    <img src="assets/logo/zayli-logo.png" alt="ZAYLI" class="footer-logo">
                     <h3>Zayli</h3>
                     <p>Timeless elegance in every piece</p>
                 </div>
@@ -322,6 +325,11 @@
             </div>
         </div>
     </div>
+
+    <!-- Floating WhatsApp Button -->
+    <a href="https://wa.me/917903162712?text=Hi! I'm interested in Zayli jewelry. Can you help me?" class="wa-float" target="_blank" rel="noopener">
+        <i class="fa-brands fa-whatsapp"></i>
+    </a>
 
     <script src="script.js"></script>
 </body>
