Fix logo corruption by adding actual ZAYLI logo file and updating file extensions from .png to .jpeg

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <img src="assets/logo/zayli-logo.png" alt="ZAYLI" class="nav-logo">
+                <img src="assets/logo/zayli-logo.jpeg" alt="ZAYLI" class="nav-logo">
                 <span class="nav-title">Zayli</span>
             </div>
             <div class="nav-menu" id="nav-menu">
@@ -35,7 +35,7 @@
     <!-- Hero -->
     <header id="home" class="hero">
         <div class="hero-inner">
-            <img src="assets/logo/zayli-logo.png" alt="ZAYLI" class="hero-logo">
+            <img src="assets/logo/zayli-logo.jpeg" alt="ZAYLI" class="hero-logo">
             <h1>Timeless Elegance by Zayli</h1>
             <p>Handcrafted earrings, necklaces, and bracelets designed to shine every day.</p>
             <div class="cta-group">
@@ -172,7 +172,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <img src="assets/logo/zayli-logo.png" alt="ZAYLI" class="footer-logo">
+                    <img src="assets/logo/zayli-logo.jpeg" alt="ZAYLI" class="footer-logo">
                     <h3>Zayli</h3>
                     <p>Timeless elegance in every piece</p>
                 </div>
